# sqlcompare

./: Makefile  NEW_FEATURES.md  PROJECT_SUMMARY.md  README.md  VALIDATION_IMPLEMENTATION.md  corrected_query.sql  demo.py  demo_new_features.py  demo_validation_fix.py  demo_validator.py  pyproject.toml  sample_queries.py  sample_query_a.sql  sample_query_b.sql  test_subquery_demo.py
.devcontainer/: devcontainer.json
src/sql_diff_ui/: __init__.py  app.py  diff_engine.py  models.py  sql_validator.py
tests/: test_diff_engine.py  test_subqueries.py  test_validator.py
